--- a/templates/login.html
+++ b/templates/login.html
@@ -127,7 +127,7 @@ hr {
       <input type="password" placeholder="Enter Password" name="pswrd" required>
 
       
-		<p><a href="/signup" >Click here to signup if new!</a></p>
+		<p><a href="/signup-link" >Click here to signup if new!</a></p>
 
       <div class="clearfix">
       
