--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -129,7 +129,7 @@ hr {
       <label for="psw-repeat"><b>Repeat Password</b></label>
       <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
       
-		<p><a href="/login" >Click here to login if user</a></p>
+		<p><a href="/login-link" >Click here to login if user</a></p>
 
       <div class="clearfix">
       
