--- a/templates/login.html
+++ b/templates/login.html
@@ -114,17 +114,17 @@ hr {
 <body>
 
 
-  <form  name="logger" action="/logger" method="POST" class="modal-content">
+  <form  name="logger" action="/login-user" method="POST" class="modal-content">
     <div class="container">
       <h1>Log In</h1>
-      <p>Please fill in this form to create an account.</p>
+      <p>Please fill in this form to log in.</p>
       <hr>
       
-      <label for="emailer"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="emailer" required>
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" required>
 
-      <label for="pswrd"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="pswrd" required>
+      <label for="password"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="password" required>
 
       
 		<p><a href="/signup-link" >Click here to signup if new!</a></p>
