commit on master

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -113,7 +113,7 @@ hr {
 </style>
 <body>
 
-  <form name="sign" action="/sign" method="POST" class="modal-content">
+  <form name="sign" action="/sign-up" method="POST" class="modal-content">
 
     <div class="container">
       <h1>Sign Up</h1>
@@ -123,11 +123,10 @@ hr {
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <label for="password"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="password" required>
 
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
       
 		<p><a href="/login-link" >Click here to login if user</a></p>
 
