--- a/templates/search_engine.html
+++ b/templates/search_engine.html
@@ -201,7 +201,7 @@
                <h1>Catari Images</h1>
             </div>
 
-          <form id="search-form">
+            <form  name="search_query" action="search_query" method="POST" class="modal-content"> 
               <input type="text" name="search" id="search-box">
               <div id="button-container">
                 <input type="submit" class="signupbtn" value="Google Search">
